--- a/Templates/index.html
+++ b/Templates/index.html
@@ -70,14 +70,14 @@
         <form action="/trans" method="post" class="mt-4">
             <div class="form-group">
                 <label for="text">Enter Text</label>
-                <textarea name="text" id="text" rows="3" required class="form-control"></textarea>
+                <textarea name="text" id="text" rows="3" required class="form-control">{{ input_text }}</textarea>
             </div>
 
             <div class="form-group">
                 <label for="target_lang">Select Target Language</label>
                 <select class="form-control" name="target_lang" id="target_lang" required>
                     {% for lang_code, lang_name in languages.items() %}
-                    <option value="{{lang_code}}">{{lang_name}}</option>
+                    <option value="{{ lang_code }}" {% if lang_code == selected_lang %}selected{% endif %}>{{ lang_name }}</option>
                     {% endfor %}
                 </select>
             </div>
